商品根据关键字，分类，品牌，规格查询,按价格查询,分页查询，每页固定30条数据

--- a/qingcheng_web_portal/src/main/webapp/WEB-INF/templates/search.html
+++ b/qingcheng_web_portal/src/main/webapp/WEB-INF/templates/search.html
@@ -629,27 +629,19 @@
 							<li class="prev disabled">
 								<a href="#">«上一页</a>
 							</li>
-							<li class="active">
-								<a href="#">1</a>
+
+                            <li class="dotted" th:if="${startPage > 1}"><span>...</span></li>
+
+							<li th:each="page:${#numbers.sequence(startPage,endPage)}" th:class="${page == pageNo ? 'active':''}">
+                                <a th:href="${#strings.replace(url,'&pageNo=' + searchMap.pageNo,'&pageNo=' + page)}" th:text="${page}"></a>
 							</li>
-							<li>
-								<a href="#">2</a>
-							</li>
-							<li>
-								<a href="#">3</a>
-							</li>
-							<li>
-								<a href="#">4</a>
-							</li>
-							<li>
-								<a href="#">5</a>
-							</li>
-							<li class="dotted"><span>...</span></li>
+
+							<li class="dotted" th:if="${endPage < result.totalPages}"><span>...</span></li>
 							<li class="next">
 								<a href="#">下一页»</a>
 							</li>
 						</ul>
-						<div><span>共10页&nbsp;</span><span>
+						<div><span th:text="${'共' + result.totalPages + '页'}"></span><span>
       到第
       <input type="text" class="page-num">
       页 <button class="page-confirm" onclick="alert(1)">确定</button></span></div>
